# bwk-dart

./: .gitignore  CHANGELOG.md  README.md  compile.native.sh  flutter_rust_bridge.yaml  justfile  pubspec.yaml
.github/workflows/: ci.yml  precompiled_binaries.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bwk_dart/: MainActivity.kt
assets/: release.config.txt
cargokit/build_tool/lib/src/: android_environment.dart
cargokit/gradle/: plugin.gradle
doc/: structure.md
example/: pubspec.yaml
example/lib/: main.dart
ios/: bwk.podspec
lib/src/utils/: loader.dart
linux/: CMakeLists.txt  my_application.cc
macos/: bwk_dart.podspec
rust/: Cargo.toml  Dockerfile  android.sh  cargokit.yaml  compress.sh  copy.sh  darwin.sh  docker-entrypoint.sh  linux.sh  unit-test.sh
rust/src/: lib.rs
rust/src/api/: mod.rs  ping.rs  regtest.rs  sp_account.rs  types.rs
rust/tests/: no_auto_scan_in_rust.rs  no_continuous_in_dart.rs  scan_regtest.rs  send_regtest.rs
scripts/: audit-sp-invariant.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
