[package]
name = "dart_bwk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
bwk-sp  = { path = "/home/pyth/bwk/.claude/worktrees/sp-sync-bench/sp", package = "bwk-sp" }
bwk     = { path = "/home/pyth/bwk/.claude/worktrees/sp-sync-bench/bwk", package = "bwk", features = ["sp"] }
bwk-tx  = { path = "/home/pyth/bwk/.claude/worktrees/sp-sync-bench/tx", package = "bwk-tx" }
bitcoin = { version = "0.32", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
log = "0.4"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"

[features]
bull_sdk = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)', 'cfg(feature, values("continuous-scan"))'] }
